--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # -----------------------------
-# PostgreSQL (TypeORM)
+# PostgreSQL
 # -----------------------------
 DB_HOST=postgres
 DB_PORT=5432
