Refactor Docker configurations to use environment variables for database settings, enhance production command for NestJS, and add cookie-parser middleware for session management. Implement session permissions decorator and authentication guard for improved security. Update user session handling and database migrations for session expiration management.

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,7 +15,7 @@ FROM node:22 as runner
 
 WORKDIR /app
 
-# Копіюємо node_modules з builder (але можна використовувати npm ci --production)
+# Copy node_modules from builder (but you can also use npm ci --production)
 COPY --from=builder /app/node_modules ./node_modules
 
 COPY --from=builder /app/dist ./dist
