--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,8 +23,8 @@ services:
       - .env
     environment:
       DATABASE_URL: ${DATABASE_URL}
-      POSTGRES_PASSWORD: "121314Qq"   # обов'язково вкажіть пароль
-      POSTGRES_DB: "english_ai"
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_DATABASE: ${POSTGRES_DB}
     ports:
       - "5433:5432"
     volumes:
