Refactor environment configuration to use npm commands in README, update .env.example for SSL usage, and add type definitions for environment variables and Express request. Introduce session permissions and user ID decorators for enhanced security and user management in the application.

--- a/.env.example
+++ b/.env.example
@@ -4,22 +4,13 @@
 POSTGRES_DB=english
 POSTGRES_PASSWORD=123456
 DATABASE_URL=postgres://postgres:123456@postgres:5432/english
-# USE_SSL_FOR_DATABASE;
+USE_SSL_FOR_DATABASE=;
 
 # -----------------------------
 # Redis
 # -----------------------------
 REDIS_HOST=redis
 REDIS_PORT=6379
-
-# -----------------------------
-# MongoDB
-# -----------------------------
-# MONGO_HOST=mongodb
-# MONGO_PORT=27017
-# MONGO_DB=ai
-# MONGO_USER=user
-# MONGO_PASS=12345678
 
 # -----------------------------
 # Application
