Enhance environment configuration by adding FRONTEND_DOMAIN and FRONTEND_URL variables. Update package.json with project description and author details. Improve README with API documentation link. Refactor CORS settings in main.ts to include new frontend variables. Update Swagger setup path in swagger.config.ts. Modify AuthController to utilize frontend domain for session cookies and add user profile retrieval in UsersController.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "en-api",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "English Ai",
+  "author": "RondoYummy <basrers@ukr.net>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
